--- a/index.html
+++ b/index.html
@@ -11,45 +11,35 @@
     <link rel="preconnect" href="https://fonts.googlelapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googlelapis.com/css2?family=Permanent+Market&family=Poppins:wght@100;200;300;400;500;600;700;800;900&dysplay=swap"
+        href="https://fonts.googlelapis.com/css2?family=Permanent+Marker&family=Poppins:wght@100;200;300;400;500;600;700;800;900&dysplay=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
 <body>
     <section class="hero">
-        <div class="logo">
-            <h2>
-                <a href="#">GameOn</a>
-            </h2>
+        <div class="main-width">
+            <header>
+                <div class="logo">
+                    <h2><a href="#">GameOn</a></h2>
+                </div>
+
+                <nav>
+                    <ul>
+                        <li class="active"><a href="#">Games</a></li>
+                        <li><a href="#">Reviews</a></li>
+                        <li><a href="#">Faq</a></li>
+                        <li><a href="#">Chat</a></li>
+                        <li class="btn"><a href="#">Download</a></li>
+                    </ul>
+                </nav>
+            </header>
         </div>
-
-        <nav>
-            <ul>
-
-                <li class="active">
-                    <a href="#">Games</a>
-                </li>
-
-                <li>
-                    <a href="#">Reviews</a>
-                </li>
-                <li>
-                    <a href="#">Faq</a>
-                </li>
-                <li>
-                    <a href="#">Chat</a>
-                </li>
-                <li class="btn">
-                    <a href="#">Download</a>
-                </li>
-
-            </ul>
-        </nav>
     </section>
+
 </body>
 
 </html>
